<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".VerifyOTP"
    android:background="@color/background"
    android:padding="20dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

    <ImageView
        android:id="@+id/otp_back"
        android:layout_width="30dp"
        android:onClick="callBack"
        android:layout_height="30dp"
        android:src="@drawable/ic_back"
        app:tint="@color/black"/>

    <TextView
        android:id="@+id/otp_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/muli_black"
        android:text="@string/code"
        android:textColor="@color/black"
        android:textSize="100sp"
        android:textStyle="bold"
        android:gravity="center"
        android:includeFontPadding="false"/>

    <TextView
        android:id="@+id/otp_tv2"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/muli_black"
        android:text="@string/verification"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="25sp"/>

    <TextView
        android:id="@+id/otp_tv3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/otp_desc"
        android:textColor="@color/black"
        android:textSize="20sp" />


    <com.chaos.view.PinView
        android:id="@+id/pinview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        app:itemCount="6"
        android:textColor="@color/black"
        app:itemHeight="50dp"
        app:itemWidth="50dp"
        app:lineColor="@color/black"
        android:itemBackground="#faee5a"
        style="@style/PinWidget.PinView"
        android:cursorVisible="true"
        app:cursorColor="@color/black"
        app:hideLineWhenFilled="true"/>

    <Button
        android:id="@+id/otp_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:textSize="18sp"
        android:onClick="callNextScreenFromOTP"
        android:background="#faee5a"
        android:fontFamily="@font/muli_black"
        android:elevation="20dp"
        android:text="@string/otp_submit"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nocode"
        android:gravity="center"
        android:textSize="16sp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/muli_black"
        android:textColor="@color/black"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/resend"
        android:gravity="center"
        android:fontFamily="@font/muli_black"
        android:textColor="#f23557"
        android:textSize="16sp"/>

    <ProgressBar
        android:id="@+id/progressBarOTP"
        android:indeterminateTint="@color/black"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" />

        </LinearLayout>

    </ScrollView>


</LinearLayout>