<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".ForgotPassword">

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/ic_back"
        android:onClick="callBackLogin"
        app:tint="@color/black"/>

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/allah_tala"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:textSize="28sp"
        android:textColor="@color/black"
        android:fontFamily="@font/muli_black"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_mobile"
        android:fontFamily="@font/muli_black"
        android:gravity="center"
        android:textSize="18sp"
        android:layout_marginTop="14dp"/>

    <LinearLayout
        android:id="@+id/number_layout_frgt"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/round_edittext_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_layout_signup">

        <com.hbb20.CountryCodePicker
            android:id="@+id/frgt_countrycode"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:textAlignment="center"
            app:ccpDialog_showPhoneCode="true"
            app:ccp_autoDetectCountry="true"
            app:ccp_showFlag="true"
            app:ccp_showFullName="false"
            app:ccp_showNameCode="false"
            app:ccp_textSize="14sp" />

        <View
            android:layout_width="0.1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_toRightOf="@+id/countrycode"
            android:background="@color/darkgray" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/forgot_phone">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:ems="10"
                android:layout_gravity="center_vertical"
                android:textSize="14sp"
                android:fontFamily="@font/muli_extralight"
                android:hint="Phone"
                android:background="#00000000"
                android:inputType="phone"/>

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:elevation="15dp"
        android:textSize="18sp"
        android:onClick="verifyPhoneNumber"
        android:fontFamily="@font/muli_black"
        android:textColor="@color/black"
        android:text="@string/next"
        android:background="@color/btn_back"/>

    <ProgressBar
        android:id="@+id/progressBarForgot"
        style="?android:attr/progressBarStyle"
        android:visibility="invisible"
        android:layout_marginTop="15dp"
        android:indeterminateTint="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>