<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <Button
            android:id="@+id/skipbtn_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:drawableEnd="@drawable/skip_icon"
            android:drawableRight="@drawable/skip_icon"
            android:onClick="skip"
            android:padding="10dp"
            android:text="@string/skip_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="220dp"
            android:layout_height="220dp"
            android:layout_marginTop="50dp"
            android:src="@drawable/iconn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/skipbtn_signup" />

        <LinearLayout
            android:layout_marginTop="25dp"
            android:id="@+id/number_layout_signin"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/round_edittext_background"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView">

            <com.hbb20.CountryCodePicker
                android:id="@+id/countrycode"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                app:ccp_autoDetectCountry="true"
                app:ccp_showFlag="true"
                app:ccpDialog_showPhoneCode="true"
                app:ccp_showNameCode="false"
                app:ccp_showFullName="false"
                android:gravity="center"
                app:ccp_textSize="14sp"
                android:layout_gravity="center_vertical"
                android:textAlignment="center"/>

            <View
                android:layout_width="0.1dp"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_toRightOf="@+id/countrycode"
                android:background="@color/darkgray" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/login_phone">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:ems="10"
                android:layout_gravity="center_vertical"
                android:textSize="14sp"
                android:fontFamily="@font/muli_extralight"
                android:hint="Phone"
                android:background="#00000000"
                android:inputType="phone"/>

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/password_layout_signin"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/number_layout_signin"
            android:background="@drawable/round_edittext_background">

            <ImageView
                android:id="@+id/password_image"
                android:layout_width="80dp"
                android:layout_height="15dp"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:src="@drawable/ic_lock"
                app:tint="@color/black" />

            <View
                android:layout_width="0.1dp"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_toRightOf="@+id/countrycode"
                android:background="@color/darkgray" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                app:endIconMode="password_toggle"
                android:layout_marginBottom="7dp"
                android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_gravity="center_vertical"
                android:textSize="14sp"
                android:ems="10"
                android:fontFamily="@font/muli_extralight"
                android:background="#00000000"
                android:hint="Password"
                android:inputType="textPassword"/>

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>


        <TextView
            android:id="@+id/forgot_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:onClick="forgotPassword"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/muli_black"
            android:text="@string/frgt"
            android:textColor="#f23557"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginbtn" />

        <Button
            android:id="@+id/loginbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="16dp"
            android:background="#faee5a"
            android:elevation="20dp"
            android:onClick="login"
            android:fontFamily="@font/muli_black"
            android:text="@string/login"
            android:textColor="@color/black"
            android:textSize="18dp"
            app:layout_constraintTop_toBottomOf="@+id/password_layout_signin"
            tools:layout_editor_absoluteX="10dp" />

        <ProgressBar
            android:id="@+id/login_progress_bar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:indeterminateTint="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_up_layout"
            app:layout_constraintVertical_bias="0.18"
            tools:visibility="invisible" />


        <LinearLayout
            android:id="@+id/sign_up_layout"
            android:layout_width="match_parent"
            android:layout_marginTop="15dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/forgot_pass">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/muli_black"
                android:text="@string/newUser"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <TextView
                android:id="@+id/sign_up_screen"
                android:layout_width="wrap_content"
                android:onClick="callSignUpScreen"
                android:layout_height="wrap_content"
                android:fontFamily="@font/muli_black"
                android:text="@string/signUp"
                android:textColor="#f23557"
                android:textSize="18sp"/>


        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>