<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".ChangePassword">

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/ic_back"
        android:onClick="callBackToForgotPass"
        app:tint="@color/black"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">


        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/frgtpass"
            android:gravity="center"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/frgt_3"
        android:gravity="center"
        android:textSize="50sp"
        android:fontFamily="@font/muli_black"
        android:textColor="@color/black"/>

<!--    <TextView-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/frgt_1"-->
<!--        android:gravity="center"-->
<!--        android:textSize="20sp"-->
<!--        android:fontFamily="@font/muli_black"-->
<!--        android:textColor="@color/black"/>-->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/baloo_paaji"
                android:gravity="center"
                android:text="@string/frgt_2"
                android:textColor="@color/black"
                android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/password_layout_signup"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/round_edittext_background"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/password_image"
            android:layout_width="80dp"
            android:layout_height="15dp"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:src="@drawable/ic_lock"
            app:tint="@color/black" />

        <View
            android:layout_width="0.1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_toRightOf="@+id/countrycode"
            android:background="@color/darkgray" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:id="@+id/new_password"
            android:layout_marginBottom="7dp"
            app:endIconMode="password_toggle"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="10dp"
                android:background="#00000000"
                android:ems="10"
                android:fontFamily="@font/muli_extralight"
                android:hint="Password (min 8 characters)"
                android:inputType="textPassword"
                android:textSize="14sp"/>

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/confirm_password_layout_new"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/round_edittext_background"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_layout_signup">

        <ImageView
            android:id="@+id/confirm_password_image"
            android:layout_width="80dp"
            android:layout_height="15dp"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:src="@drawable/ic_lock"
            app:tint="@color/black" />

        <View
            android:layout_width="0.1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_toRightOf="@+id/countrycode"
            android:background="@color/darkgray" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:id="@+id/new_password_confirm"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginHorizontal="10dp"
                android:background="#00000000"
                android:ems="10"
                android:fontFamily="@font/muli_extralight"
                android:hint="Confirm Password"
                android:inputType="textPassword"
                android:textSize="14sp"
                android:textStyle="bold" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/btn_back"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="10dp"
            android:text="@string/frgt_btn"
            android:onClick="setNewPassword"
            android:fontFamily="@font/muli_black"
            android:textColor="@color/black"
            android:elevation="15dp"/>

            <ProgressBar
                android:id="@+id/new_pass_progress_bar"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:visibility="invisible"
                android:layout_marginTop="10dp"
                android:indeterminateTint="@color/black"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>