<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background"
    tools:context="com.ashwathama.apnacountrypizza.Fragment.ProfileFragment">

    <!-- TODO: Update blank fragment layout -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="210dp"
                android:gravity="center"
                android:layout_marginVertical="10dp">

                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:src="@drawable/iconn"/>

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:gravity="center_vertical"
                android:layout_marginVertical="15dp">

                <TextView
                    android:id="@+id/profile_name"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:fontFamily="sans-serif-light"
                    android:text="Name"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/change_name_icon"
                    android:layout_width="20dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/edit"
                    app:tint="#f23557"
                    android:layout_alignParentRight="true"/>

                <TextView
                    android:id="@+id/change_name"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/edit"
                    android:textColor="#f23557"
                    android:layout_marginRight="10dp"
                    android:textSize="18sp"
                    android:layout_toLeftOf="@+id/change_name_icon"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:gravity="center_vertical">


            <TextView
                android:id="@+id/profile_phone"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="Phone"
                android:layout_marginTop="2dp"
                android:textSize="18sp"
                android:fontFamily="sans-serif-light"
                android:textColor="@color/black"/>

                <ImageView
                    android:id="@+id/change_phone_icon"
                    android:layout_width="20dp"
                    android:layout_marginVertical="5dp"
                    android:layout_height="20dp"
                    android:src="@drawable/edit"
                    app:tint="#f23557"
                    android:layout_alignParentRight="true"/>

                <TextView
                    android:id="@+id/change_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/edit"
                    android:textColor="#f23557"
                    android:layout_marginRight="10dp"
                    android:textSize="18sp"
                    android:layout_toLeftOf="@+id/change_phone_icon"/>

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/change_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_marginTop="12dp">

                <TextView
                    android:id="@+id/change_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/change_pass"
                    android:textSize="22sp"
                    android:textColor="#f23557"
                    android:fontFamily="sans-serif-light"/>

                <ImageView
                    android:id="@+id/change_image"
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:src="@drawable/ic_lock"
                    android:layout_marginLeft="10dp"
                    app:tint="#f23557" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <TextView
                    android:id="@+id/add_address_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="MANAGE ADDRESSES"
                    android:textSize="22sp"
                    android:fontFamily="sans-serif-light"
                    android:textColor="@color/black"/>

                <ImageView
                    android:id="@+id/add_address_icon"
                    android:layout_marginTop="5dp"
                    android:layout_width="23dp"
                    android:layout_height="23dp"
                    android:src="@drawable/plus"
                    android:layout_alignParentEnd="true"
                    app:tint="@color/black" />

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/logout_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/logout_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/logout"
                    android:textSize="22sp"
                    android:textColor="#f23557"
                    android:fontFamily="sans-serif-light"/>

                <ImageView
                    android:id="@+id/logout_icon"
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:src="@drawable/logout"
                    app:tint="#f23557"
                    android:layout_marginLeft="10dp"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</FrameLayout>